--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,22 +4,12 @@
     <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <script>
-        function toggleForm() {
-            var loginForm = document.getElementById('login-form');
-            var signupForm = document.getElementById('signup-form');
-            if (loginForm.style.display === "none") {
-                loginForm.style.display = "block";
-                signupForm.style.display = "none";
-            } else {
-                loginForm.style.display = "none";
-                signupForm.style.display = "block";
-            }
-        }
-    </script>
+    
 </head>
 
 <body>
+
+    <a th:href="@{/signup}">Home page</a>
     <div class="container">
         <!-- Login Form -->
         <div id="login-form">
@@ -29,20 +19,10 @@
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a class="toggle-link" onclick="toggleForm()">Sign up</a></p>
+            <p>Don't have an account? <a th:ref="@{/signup}">Sign up</a></p>
         </div>
 
-        <!-- Sign-up Form -->
-        <div id="signup-form" class="toggle-form">
-            <h2>Sign Up</h2>
-            <form th:action="@{/signup}" method="post">
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
-            </form>
-            <p>Already have an account? <a class="toggle-link" onclick="toggleForm()">Login</a></p>
-        </div>
-    </div>
+     
+       
 </body>
 </html>
