--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,25 +3,52 @@
 <head>
     <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    
+    <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 
 <body>
+    
+    <div class="page">
+        <div class="signupbox">
+        <!-- Display flash attributes -->
+            <div th:if="${message}" class="alert" th:class="${alertClass}">
+                <span th:text="${message}"></span>
+            </div>
+                
+                <h2>Login</h2>
+                <form class="signupForm" th:action="@{/login}" th:object="${user}" method="POST">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                </form>
+                <p>Don't have an account? <a th:href="@{/signup}">Sign up</a></p>
 
-    <a th:href="@{/signup}">Home page</a>
-    <div class="container">
-        <!-- Login Form -->
-        <div id="login-form"> 
-            
-            <h2>Login</h2>
-            <form th:action="@{/login}" method="post">
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-            </form>
-            <p>Don't have an account? <a th:ref="@{/signup}">Sign up</a></p>
+                            <!-- <table style="width:80%" border="1"
+                        class = "table table-striped table-responsive-md">
+                    <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Role</th>
+                    <th>ID</th>
+                    
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="user:${alluserlist}">
+                        <td th:text="${user.username}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td th:text="${user.role}"></td>
+                        <td th:text="${user.user_id}"></td>
+                    
+                </tr>
+                </tbody>
+                </table> -->
         </div>
+    </div>
+        
 
      
        
