--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,18 +4,25 @@
     <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-
+    <link rel="stylesheet" href="styles.css"> 
 </head>
-<body>
-<div class="signup-container">
-    <h2>Sign Up</h2>
-    <form action="/signup" method="post">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="/login">Login here</a></p>
+<body>    
+<div class="page">
+        <div class="signupbox">
+        <!-- Display flash attributes -->
+        <div th:if="${message}" class="alert" th:class="${alertClass}">
+            <span th:text="${message}"></span>
+        </div>
+
+        <h2>Register</h2>
+        <form class="signupForm" th:action="@{/signup}" method="POST" th:object="${user}">
+            <input type="text" th:field="*{username}" placeholder="Username" required>
+            <input type="email" th:field="*{email}" placeholder="Email" required>
+            <input type="password" data-th-field="*{password}" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        <p>Already have an account? <a href="/login">Login here</a></p>
+    </div>
 </div>
 </body>
 </html>
