--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -36,10 +36,12 @@ h2{
 
 .alert-danger{
         /* Error message color */
+        color: rgba(148, 6, 6, 0.993);
 }
 
 .alert-success{
         /* Success message color */
+        color: green;
 }
 .signupForm{
     width: 90%;
