--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:block="${title}">Default Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Bootstrap for styling -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
-<body>
+<body >
     <div th:fragment="header">
     <header >
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
