--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,10 @@
             <div th:if="${message}" class="alert" th:class="${alertClass}">
                 <span th:text="${message}"></span>
             </div>
-                
+            <!-- <div th:if="${param.error}">
+                Invalid username and password.</div>
+            <div th:if="${param.logout}">
+                You have been logged out.</div> -->
                 <h2>Login</h2>
                 <form class="signupForm" th:action="@{/login}" th:object="${user}" method="POST">
                     <input type="text" name="username" placeholder="Username" required>
@@ -25,7 +28,7 @@
                 </form>
                 <p>Don't have an account? <a th:href="@{/signup}">Sign up</a></p>
 
-                            <!-- <table style="width:80%" border="1"
+                            <table style="width:80%" border="1"
                         class = "table table-striped table-responsive-md">
                     <thead>
                 <tr>
@@ -45,7 +48,7 @@
                     
                 </tr>
                 </tbody>
-                </table> -->
+                </table>
         </div>
     </div>
         
