added aboutus and patient dash with sidebar

--- a/src/main/resources/templates/admin_dash.html
+++ b/src/main/resources/templates/admin_dash.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
+   <div th:replace= "~{/layout :: header }"></div>
+
    
 
     
     <div class="page">
         <h2>Welcome, <span th:text="${username}"></span>!</h2>
     </div>
+
+    <div th:replace= "~{/layout :: footer }"></div>
+
+    
 </body>
 </html>
