--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,13 +9,36 @@
 </head>
 <body >
     <div th:fragment="header">
-    <header >
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">My Application</a>            
-        </nav>
-    </header>
+        <header>
+            <!-- Button to open a side navigation menu -->
+            
+    
+            <!-- Navigation bar -->
+            <nav class="navbar">
+                <!-- Brand Name -->
+                <a class="navbar-brand" href="#"><button class="openbtn" onclick="openNav()">&#9776;</button>Lifeline</a>
+    
+                <!-- Right-aligned content (user profile) -->
+                <ul class="navbar-right">
+                    <!-- Check if user is logged in -->
+                    <li class="nav-item dropdown" th:if="${user != null}">
+                        <a class="nav-link" id="userDropdown" onclick="toggleDropdown()" th:text="${username}">                            
+                        </a>
+    
+                        <!-- Dropdown Menu -->
+                        <div class="dropdown-content" id="dropdownMenu">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>       
     </div>
-    <div t th:fragment= "alert">
+    
+
+    <div th:fragment= "alert">
          <!-- Display flash attributes -->
          <div th:if="${message}" class="alert" th:class="${alertClass}">
             <span th:text="${message}"></span>
@@ -23,9 +46,36 @@
     </div>
     
     <div th:fragment= "footer">
-    <footer class="text-center">
-        <p>&copy; 2024 My Application. All rights reserved.</p>
-    </footer>
+            <footer class="text-center">
+                        <p>&copy; 2024 My Application. All rights reserved.</p>
+                        <!-- Sidebar Script -->
+                <script src="sidebar.js"></script>
+                <div  id='mySidebar' class='sidebar'>
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    
+                    <!-- <a href='{{homeRoute}}'>Dashboard</a>
+                    <a href="{{ url_for('chart.journal_entry') }}">View Ledgers</a>
+                    <a href="{{ url_for('chart.view_accounts') }}">View Accounts</a>
+                    <a href="{{ url_for('eventlog.view_eventlogs') }}">View Event Logs</a>
+                    
+                    <a href='{{homeRoute}}'>Dashboard</a>
+                    <a href="{{ url_for('views.view_users') }}">View Users</a>
+                    <a href="{{ url_for('chart.journal_entry') }}">View Ledgers</a>
+                    <a href="{{ url_for('chart.view_accounts') }}">View Accounts</a>
+                    <a href="{{ url_for('eventlog.view_eventlogs') }}">View Event Logs</a> -->
+                
+                    <a href=''>Home</a>
+                    <a href="">Login</a>
+                    <a href="">Sign-up</a>
+                    <a href=''>Contact-Us</a>
+                    <a th:href= "@{/aboutus}">About-us</a>                    
+                </div>
+                
+            </footer>
     </div>
+
+    
+
+    
 </body>
 </html>
