--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,13 +9,10 @@
 </head>
 
 <body>
-    
+    <div th:replace= "~{/layout :: header}"></div>
     <div class="page">
         <div class="signupbox">
-        <!-- Display flash attributes -->
-            <div th:if="${message}" class="alert" th:class="${alertClass}">
-                <span th:text="${message}"></span>
-            </div>
+        
             
                 <h2>Login</h2>
                 <form class="signupForm" th:action="@{/login}" th:object="${user}" method="POST">
