--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,23 +7,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> 
 </head>
-<body>    
+<body>  
+    <div th:replace= "~{layout :: header}"></div>  
 <div class="page">
         <div class="signupbox">
         <!-- Display flash attributes -->
-        <div th:if="${message}" class="alert" th:class="${alertClass}">
-            <span th:text="${message}"></span>
-        </div>
+       
 
         <h2>Register</h2>
         <form class="signupForm" th:action="@{/signup}" method="POST" th:object="${user}">
-            <input type="text" th:field="*{username}" placeholder="Username" required>
+            <input type="text" th:field="*{first_name}" placeholder="First Name" required>
+            <input type="text" th:field="*{last_name}" placeholder="Last Name" required>
+            <input type="date" th:field="*{dob}" placeholder="Date of Birth" required>
             <input type="email" th:field="*{email}" placeholder="Email" required>
+            <input type="text" th:field="*{username}" placeholder="User Name" required>
             <input type="password" data-th-field="*{password}" placeholder="Password" required>
             <button type="submit">Sign Up</button>
         </form>
         <p>Already have an account? <a href="/login">Login here</a></p>
     </div>
 </div>
+<div th:replace= "~{layout :: footer}"></div>
 </body>
 </html>
