--- a/src/main/resources/templates/edit_profile.html
+++ b/src/main/resources/templates/edit_profile.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div th:replace= "~{/layout :: header }"></div>
+
+    <div class="page">
     <div class="profile-info">
         <h1>Edit Profile</h1>
         <form th:action="@{/edit_profile}" method="POST" class="profile-form" th:object="${user}" >
@@ -27,10 +30,12 @@
             <input type="password" id="password" th:field="*{password}" placeholder="Enter new password">
 
             <label for="confirm-password">Confirm Password</label>
-            <input type="password" id="confirm-password" placeholder="Confirm new password">
+            <input type="password" id="confirm-password" th:field="*{password}" placeholder="Confirm new password">
 
             <button type="submit" class="btn-save">Save Changes</button>
         </form>
     </div>
+    </div>
+    <div th:replace= "~{/layout :: footer }"></div>
 </body>
 </html>
