--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,35 +8,32 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body >
-    <div th:fragment="header">
-        <header>
-            <!-- Button to open a side navigation menu -->
-            
-    
-            <!-- Navigation bar -->
-            <nav class="navbar">
-                <!-- Brand Name -->
-                 <button class="openbtn" onclick="openNav()">&#9776;</button>
+    <div th:fragment="header" >
+    <header>
+        <!-- Button to open a side navigation menu -->
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
 
-                <a class="navbar-brand" href="#"><img src="imgs/minilogo.png">   Lifeline</a>
-    
-                <!-- Right-aligned content (user profile) -->
-                <ul class="navbar-right">
-                    <!-- Check if user is logged in -->
-                    <li class="nav-item dropdown" th:if="${user != null}">
-                        <a class="nav-link" id="userDropdown" onclick="toggleDropdown()" th:text="${username}">                            
-                        </a>
-    
-                        <!-- Dropdown Menu -->
-                        <div class="dropdown-content" id="dropdownMenu">
-                            <a class="dropdown-item" th:href= "@{/view_profile}">Profile</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+        <!-- Brand Name -->
+        <div class="brand">
+            <a class="navbar-brand" href="#"><img src="imgs/minilogo.png" alt="Logo"> Lifeline</a>
+        </div>
+
+        <!-- Right-aligned content (user profile) -->
+        <ul class="navbar-right">
+            <!-- Check if user is logged in -->
+            <li class="nav-item" th:if="${user != null}">
+                <a class="nav-link" id="userDropdown" onclick="toggleDropdown()" th:text="${user.username}"></a>
+
+                <!-- Dropdown Menu -->
+                <div class="dropdown-content" id="dropdownMenu">
+                    <a class="dropdown-item" th:href="@{/view_profile}">Profile</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                </div>
+            </li>
+        </ul>
+    </header>
+
         <!-- Display flash attributes -->
         <div th:if="${message}" class="alert" th:class="${alertClass}">
             <span th:text="${message}"></span>
@@ -45,8 +42,8 @@
 
     
     
-    <div th:fragment= "footer">
-            <footer class="text-center">
+    <div th:fragment= "footer" >
+            <footer >
                         <p>&copy; 2024 My Application. All rights reserved.</p>
                         <!-- Sidebar Script -->
                 <script src="sidebar.js"></script>
