--- a/src/main/resources/templates/view_profile.html
+++ b/src/main/resources/templates/view_profile.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div th:replace= "~{/layout :: header}"></div>
+    <div class="page">
     <div class="profile-info">
         <h1>Profile</h1>
         <div >
@@ -18,6 +19,7 @@
             <p><strong>DOB:</strong> <span th:text="${user.getDob}"></span></p>
         </div>
         <a th:href="@{/edit_profile}" class="">Edit Profile</a>
+    </div>
     </div>
     <div th:replace= "~{/layout :: footer }"></div>
 </body>
