Appointment/scheduling appointments

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -14,7 +14,7 @@
         <h1>About Lifeline Clinic</h1>
     </div>
 
-    <div class="container">
+    <div class="page">
         <div class="about-section">
             <h2>Who We Are</h2>
             <p>At Lifeline Clinic, we are a dedicated team of students committed to developing a comprehensive healthcare management system that enhances the physical, emotional, and mental well-being of patients. <br>Our project is driven by the belief that everyone deserves access to high-quality healthcare, and we aim to create a user-friendly platform that empowers patients and healthcare providers alike.
