--- a/src/main/resources/templates/admin_dash.html
+++ b/src/main/resources/templates/admin_dash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:block="${title}">Default Title</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Bootstrap for styling -->
+    
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -17,11 +17,13 @@
         <div class="container">
             <div class="dashboard-header">Patient Dashboard</div>
             
-            <div class="grid">           
-                <div class="card">
-                    <div class="card-icon">📅</div>
-                    <div class="card-title">Appointment</div>
-                </div>
+            <div class="grid">    
+                <a th:if="${user.getRole() == 'ADMIN'}" th:href="@{/appointments}">       
+                    <div class="card">
+                        <div class="card-icon">📅</div>
+                        <div class="card-title">Appointments</div>
+                    </div>
+                </a>
                 <a th:if="${user.getRole() == 'ADMIN'}" th:href="@{/registerPatient}">
                     <div class="card">
                         <div class="card-icon">📝</div>
@@ -34,10 +36,12 @@
                         <div class="card-title">View Patients</div>
                     </div>
                 </a>
-                <div class="card">
-                    <div class="card-icon">🔬</div>
-                    <div class="card-title">Laboratory Results</div>
-                </div>
+                <a th:if="${user.getRole() == 'ADMIN'}" th:href="@{/schedule_appointment}">       
+                    <div class="card">
+                        <div class="card-icon">📅</div>
+                        <div class="card-title">Schedule an Appointment</div>
+                    </div>
+                </a>
                 <div class="card">
                     <div class="card-icon">💳</div>
                     <div class="card-title">Billing</div>
