--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -60,7 +60,7 @@
                 <a th:href= "@{/}">Home</a>
                 <a th:href= "@{/login}">Login</a>
                 <a th:href= "@{/signup}">Sign-up</a>                    
-                <a th:href= "@{/aboutus}">About-us</a>     
+                <a th:href= "@{aboutus}">About-us</a>     
             </div>               
         </div>     
     </div> 
