should solve hosting issue

--- a/src/main/resources/templates/health_records.html
+++ b/src/main/resources/templates/health_records.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div th:replace= "~{/layout :: header }"></div>
+    <div th:replace= "~{layout :: header }"></div>
     <div class="page">
         <div class="registerPatientBox">
             <h2>Health Records</h2>
@@ -40,6 +40,6 @@
             <a href="/add_health_record" >Add Health Record</a>
         </div>
     </div>
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 </body>
 </html>
