--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
     <div class="page">
         <div class="signupbox">
         
@@ -45,7 +45,7 @@
         </div>
     </div>
     
-    <div th:replace= "~{/layout :: footer}"></div>
+    <div th:replace= "~{layout :: footer}"></div>
 
      
        
