--- a/src/main/resources/templates/schedule_appointment.html
+++ b/src/main/resources/templates/schedule_appointment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
         <div class="page">
                 <div class="registerPatientBox">
             <h2>Schedule an Appointment</h2><br>
