--- a/src/main/resources/templates/updatePatient.html
+++ b/src/main/resources/templates/updatePatient.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
     <div class="page">
         <div class="registerPatientBox">
             <h2>Update Patient Info</h2>
@@ -171,6 +171,6 @@
         </div>
     </div>
     
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 </body>
 </html>
