--- a/src/main/resources/templates/view_health_record.html
+++ b/src/main/resources/templates/view_health_record.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div th:replace= "~{/layout :: header }"></div>
+    <div th:replace= "~{layout :: header }"></div>
     <div class="page">
         <div class="profile-info">
             <div class="patient-details">
@@ -20,6 +20,6 @@
             </div>
         </div>
     </div>
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 </body>
 </html>
