--- a/src/main/resources/templates/add_health_record.html
+++ b/src/main/resources/templates/add_health_record.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div th:replace= "~{/layout :: header }"></div>
+    <div th:replace= "~{layout :: header }"></div>
     <div class="page">
         <div class="registerPatientBox">
             <h2 >Add Health Record</h2>
@@ -40,6 +40,6 @@
             </form>
         </div>
     </div>
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 </body>
 </html>
