--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
         <div class="page">  
             <div class="registerPatientBox">
                 <h2 >Scheduled Appointments</h2>
