--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-   <div th:replace= "~{/layout :: header }"></div>
+   <div th:replace= "~{layout :: header }"></div>
 
    
 
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 
     
 </body>
