--- a/src/main/resources/templates/edit_profile.html
+++ b/src/main/resources/templates/edit_profile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div th:replace= "~{/layout :: header }"></div>
+    <div th:replace= "~{layout :: header }"></div>
 
     <div class="page">
     <div class="signupbox">
@@ -35,6 +35,6 @@
         </form>
     </div>
     </div>
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 </body>
 </html>
