--- a/src/main/resources/templates/patientProfile.html
+++ b/src/main/resources/templates/patientProfile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div th:replace="~{/layout :: header}"></div>
+    <div th:replace="~{layout :: header}"></div>
 
     <!-- Profile Page -->
     <div class="page">
@@ -75,6 +75,6 @@
         </div> 
     </div>
     <!-- Footer -->
-    <div th:replace="~{/layout :: footer}"></div>
+    <div th:replace="~{layout :: footer}"></div>
 </body>
 </html>
