--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,13 +7,13 @@
      <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>  
-    <div th:replace= "~{/layout :: header}"></div>  
+    <div th:replace= "~{layout :: header}"></div>  
 <div class="page">
         <div class="signupbox">
         <!-- Display flash attributes -->
        
 
-        <h2>Register</h2>
+        <h2>Registe</h2>
         <form class="signupForm" th:action="@{/signup}" method="POST" th:object="${newUser}">
             <input type="text" th:field="*{first_name}" placeholder="First Name" required>
             <input type="text" th:field="*{last_name}" placeholder="Last Name" required>
