--- a/src/main/resources/templates/viewPatients.html
+++ b/src/main/resources/templates/viewPatients.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your CSS file -->
 </head>
 <body>
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
 
     <div class="page">
 
@@ -62,7 +62,7 @@
             </div>
         </div>
     </div>
-    <div th:replace= "~{/layout :: footer }"></div>
+    <div th:replace= "~{layout :: footer }"></div>
 
 </body>
 </html>
