--- a/src/main/resources/templates/health_records.html
+++ b/src/main/resources/templates/health_records.html
@@ -37,7 +37,7 @@
                     </tr>
                 </tbody>
             </table>
-            <a href="/add_health_record" >Add Health Record</a>
+            <a th:if= "${user.getRole() == 'ADMIN'}" href="/add_health_record" >Add Health Record</a>
         </div>
     </div>
     <div th:replace= "~{layout :: footer }"></div>
